--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# 256 color support
+set -g default-terminal "screen-256color"
+
 # Set prefix to Ctrl/CapsLock+a
 unbind C-b
 set -g prefix C-a
@@ -25,4 +28,10 @@ set-option -g pane-active-border-fg blue
 
 # Show the number of the current pane
 set-option -g status-left '#P'
+
+# Resize panes in steps of 2 with arrow keys
+bind-key -r Up resize-pane -U 2
+bind-key -r Down resize-pane -D 2
+bind-key -r Left resize-pane -L 2
+bind-key -r Right resize-pane -R 2
 
