tmux conf update.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set -g prefix C-a
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Use v for visual selection as in vim
+bind-key -t vi-copy v begin-selection
+
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
@@ -23,9 +26,6 @@ bind - split-window -v
 # Reload source after changes
 bind r source-file ~/.tmux.conf \; display "Reloaded!" # Reloads the conf file after changes
 
-# Make the border of focused pane blue
-set-option -g pane-active-border-fg blue
-
 # Show the number of the current pane
 set-option -g status-left '#P'
 
@@ -35,3 +35,15 @@ bind-key -r Down resize-pane -D 2
 bind-key -r Left resize-pane -L 2
 bind-key -r Right resize-pane -R 2
 
+# Switch pane by mouse click
+setw -g mode-mouse on
+set-option -g mouse-select-pane on
+
+# Set informative title of current window
+set-option -g set-titles on
+set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+
+# set pane colors - highlight the active pane
+set-option -g pane-active-border-fg yellow
+set-option -g pane-active-border-bg yellow
+set-option -g pane-border-fg default
