--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ setw -g mode-keys vi
 
 # Use v for visual selection as in vim
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -47,3 +48,6 @@ set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 set-option -g pane-active-border-fg yellow
 set-option -g pane-active-border-bg yellow
 set-option -g pane-border-fg default
+
+# Allow copying to clipboard (sudo apt-get install xclip)
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
