--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set -g default-terminal "screen-256color"
 # Set prefix to Ctrl/CapsLock+a
 unbind C-b
 set -g prefix C-a
+bind a send-prefix
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -25,7 +26,7 @@ bind \ split-window -h
 bind - split-window -v
 
 # Reload source after changes
-bind r source-file ~/.tmux.conf \; display "Reloaded!" # Reloads the conf file after changes
+bind r source-file ~/.tmux.conf \; display "Reloaded!" 
 
 # Show the number of the current pane
 set-option -g status-left '#P'
@@ -36,18 +37,26 @@ bind-key -r Down resize-pane -D 2
 bind-key -r Left resize-pane -L 2
 bind-key -r Right resize-pane -R 2
 
-# Switch pane by mouse click
-setw -g mode-mouse on
-set-option -g mouse-select-pane on
-
 # Set informative title of current window
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
 # set pane colors - highlight the active pane
-set-option -g pane-active-border-fg yellow
-set-option -g pane-active-border-bg yellow
+set-option -g pane-active-border-fg white 
+set-option -g pane-active-border-bg white 
 set-option -g pane-border-fg default
+#set -g window-style 'fg=colour247,bg=colour236'
+#set -g window-active-style 'fg=colour250,bg=black'
 
 # Allow copying to clipboard (sudo apt-get install xclip)
 bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+# Smart pane switching with awareness of vim splits
+bind -n C-k run-shell 'tmux-vim-select-pane -U'
+bind -n C-j run-shell 'tmux-vim-select-pane -D'
+bind -n C-h run-shell 'tmux-vim-select-pane -L'
+bind -n C-l run-shell 'tmux-vim-select-pane -R'
+bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
+
+# Bring back clear screen under tmux prefix
+bind C-l send-keys 'C-l'
