--- a/tmux.conf
+++ b/tmux.conf
@@ -60,3 +60,6 @@ bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
 
 # Bring back clear screen under tmux prefix
 bind C-l send-keys 'C-l'
+
+# Enable mouse mode (tmux 2.1 and above)
+# set -g mouse on
