--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ bind \ split-window -h
 bind - split-window -v
 
 # Reload source after changes
-bind r source-file ~/.tmux.conf \; display "Reloaded!" 
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Show the number of the current pane
 set-option -g status-left '#P'
@@ -39,11 +39,11 @@ bind-key -r Right resize-pane -R 2
 
 # Set informative title of current window
 set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+set-option -g set-titles-string '#W'
 
 # set pane colors - highlight the active pane
-set-option -g pane-active-border-fg white 
-set-option -g pane-active-border-bg white 
+set-option -g pane-active-border-fg white
+set-option -g pane-active-border-bg white
 set-option -g pane-border-fg default
 #set -g window-style 'fg=colour247,bg=colour236'
 #set -g window-active-style 'fg=colour250,bg=black'
