update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,18 @@ unbind C-b
 set -g prefix C-a
 bind a send-prefix
 
+# needs 'brew install reattach-to-user-namespace'; this is for copying to
+# clipboard on osx
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # Use v for visual selection as in vim
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+
+# Copy to clipboard in osx
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -22,8 +28,8 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Split windows bindings
-bind \ split-window -h
-bind - split-window -v
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Reload source after changes
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -48,8 +54,8 @@ set-option -g pane-border-fg default
 #set -g window-style 'fg=colour247,bg=colour236'
 #set -g window-active-style 'fg=colour250,bg=black'
 
-# Allow copying to clipboard (sudo apt-get install xclip)
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+# Allow copying to clipboard in Linux (sudo apt-get install xclip)
+# bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 # Smart pane switching with awareness of vim splits
 bind -n C-k run-shell 'tmux-vim-select-pane -U'
